// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalBody /> ref should work 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box c0 c1 c2"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> should render Box props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

.c2 {
  margin-top: 20px;
}

<div
  class="poodle-box c0 c1 c2"
  id="id"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> should render ModalBody correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box c0 c1 c2"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> should render ModalBody with auto id 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box c0 c1 c2"
  id="id"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should disable classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="poodle-box c0 c1"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should extend styles in global 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box c0 c1 c2"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should extend styles in local 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  margin-top: 10px;
  letter-spacing: 250px;
  top: 0;
  text-indent: 1px;
}

<div
  class="poodle-box c0 c1 c2"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should override classes 1`] = `
.c0 {
  box-sizing: border-box;
}

<div
  class="poodle-box c0 morning c1"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should override styles 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  margin-top: 50px;
}

<div
  class="poodle-box c0 c1 c2"
>
  ModalBody
</div>
`;

exports[`<ModalBody /> theming should render with default props correctly 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  min-height: 200px;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
}

<div
  class="poodle-box c0 c1 hello c2"
  id="id"
>
  ModalBody
</div>
`;
